# book-embeddings

./: .gitignore  Doxyfile  index.html
code/: CMakeLists.txt  compile-wasm.ps1  compile-wasm.sh  main.cpp  main_enum.cpp  mainpage.dox
docs/html/: _formulas.dvi  _formulas.tex  _formulas_dark.dvi  _formulas_dark.tex  annotated.html  annotated_dup.js  class_b_c_t_permutation_enumerator-members.html  class_b_c_t_permutation_enumerator.html  class_b_c_t_permutation_enumerator.js  class_f_p_q_node-members.html  class_f_p_q_node.html  class_f_p_q_node.js  class_one_stack_layouts_enumerator-members.html  class_one_stack_layouts_enumerator.html  class_one_stack_layouts_enumerator.js  class_tree_node-members.html  class_tree_node.html  class_tree_node.js  classes.html  code__to__append_8js.html  code__to__append_8js.js  code__to__append_8js_source.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_050edd66366d13764f98250ef6db77f6.js  dir_36b2af9fedeb9169e20bed67ec73ae8b.html  dir_36b2af9fedeb9169e20bed67ec73ae8b.js  dir_4b7680037def9ef22c767be70d2ff18c.html  dir_4b7680037def9ef22c767be70d2ff18c.js  dir_535461f3623171572498098f0bad5f56.html  dir_535461f3623171572498098f0bad5f56.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_vars.html  (+11 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  (+69 more)
graph file examples/: complexGraph2  es1  es2  es3  es4
thesis/drawio/: BCT.drawio
web-system/: index.html
(+5 files in other folders)
